# SongDetector

./: .clangd  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  SongDetector.desktop  audiostream.cpp  audiostream.h  main.cpp  qvibra.cpp  qvibra.h  resources.qrc  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  song.cpp  song.h  song_detector.cpp  song_detector.h
.github/workflows/: cmake-single-platform.yml  release-build.yml
.zed/: debug.json
src/: about_dialog.cpp  about_dialog.h  about_dialog.ui  audiostream.cpp  main.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  shazam_body.cpp  song.cpp  song.h  song_detector.cpp  song_detector.h
src/pipewire/: pipewire_monitor.cpp  pipewire_monitor.h
src/shazam/: shazam.cpp  shazam.h  shazam_body.h  shazam_response.cpp  shazam_response.h
src/translations/: SongDetector_en_GB.ts
translations/: SongDetector_en_GB.ts
